--- a/src/views/partials/cards/product.html
+++ b/src/views/partials/cards/product.html
@@ -1,4 +1,8 @@
-<div class="card" data-card-type="product" data-display-type="col">
+<div
+  class="card"
+  data-card-type="product"
+  data-display-type="<%= displayType %>"
+>
   <div class="product-cover ratio ratio-1x1">
     <img src="<%= require(`../../../images/${cover}`) %>" alt="" />
   </div>
