--- a/src/scss/pages/explore.scss
+++ b/src/scss/pages/explore.scss
@@ -1,104 +1,342 @@
+@use "../mixins" as m;
+
 .explore {
+  // background-color: rgba(14, 31, 53, 0.06);
+  // overflow: hidden;
+
   > * {
-    .topbar {
-      margin-bottom: 12px;
-
-      > .row {
-        margin-right: 0;
-        border-bottom: 1px solid rgba(46, 43, 69, 0.1);
-      }
-
-      &-wrap {
-        padding-top: 28px;
-        padding-bottom: 24px;
-        padding-right: 0;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 17px;
-        line-height: 22px;
-        letter-spacing: -0.408px;
-        color: #2e2b45;
-
-        .counter > strong {
-          font-weight: 600;
-        }
-
-        .switch {
-          &-group {
-            background: #ffffff;
-            display: flex;
-            flex-direction: row;
-          }
-
-          &-button {
-            display: inline-flex;
-            padding: 6px 12px;
-            border: 1px solid rgba(46, 43, 69, 0.16);
-            border-left-color: rgba(46, 43, 69, 0.08);
-            border-right-color: rgba(46, 43, 69, 0.08);
-            z-index: 1;
-
-            &:first-of-type {
-              border-radius: 8px 0 0 8px;
-              border-left-color: rgba(46, 43, 69, 0.16);
-            }
-
-            &:last-of-type {
-              border-radius: 0 8px 8px 0;
-              border-right-color: rgba(46, 43, 69, 0.16);
-            }
-
-            &:not(:first-of-type) {
-              margin-left: -1px;
-            }
-
-            &.switch-active {
-              background-color: #2e2b45;
-              z-index: 2;
-              border-color: darken(#2e2b45, 10%);
-
-              i svg path {
-                fill: #f8d178;
-              }
-            }
-
-            i {
-              width: 24px;
-              height: 24px;
-              display: inline-flex;
-
-              svg {
-                width: inherit;
-                height: inherit;
-
-                path {
-                  fill: #2e2b45;
-                }
-              }
-            }
-          }
-
-          &-v-separator {
-            width: 1px;
-            height: auto;
-            border-left: 1px solid rgba(46, 43, 69, 0.3);
-            z-index: 1;
-          }
-        }
+    .content,
+    .filter {
+      .topbar-wrap {
+        padding-top: 24px;
+        padding-bottom: 12px;
       }
     }
 
     .content {
-      .grid-item {
-        margin-top: 12px;
-        margin-bottom: 12px;
+      position: relative;
+      padding-left: 24px;
+      border-left: 1px solid rgba(46, 43, 69, 0.1);
+
+      // &::before {
+      //   content: "";
+      //   position: absolute;
+      //   top: 0;
+      //   left: 0;
+      //   height: 100%;
+      //   width: 9999px;
+      //   background-color: #fff;
+      //   z-index: 0;
+      // }
+
+      &-topbar,
+      &-catalog {
+        position: relative;
+        z-index: 1;
+      }
+
+      &-topbar {
+        // margin-bottom: 12px;
+
+        > .row {
+          // margin-right: 0;
+          // border-bottom: 1px solid rgba(46, 43, 69, 0.1);
+        }
+
+        .topbar-wrap {
+          // padding-right: 0;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 15px;
+          line-height: 20px;
+          letter-spacing: -0.24px;
+          color: #2e2b45;
+
+          .counter > strong {
+            font-weight: 600;
+          }
+
+          .switch {
+            &-group {
+              background: #ffffff;
+              display: flex;
+              flex-direction: row;
+            }
+
+            &-button {
+              display: inline-flex;
+              padding: 6px 12px;
+              border: 1px solid rgba(46, 43, 69, 0.16);
+              border-left-color: rgba(46, 43, 69, 0.08);
+              border-right-color: rgba(46, 43, 69, 0.08);
+              z-index: 1;
+
+              &:first-of-type {
+                border-radius: 8px 0 0 8px;
+                border-left-color: rgba(46, 43, 69, 0.16);
+              }
+
+              &:last-of-type {
+                border-radius: 0 8px 8px 0;
+                border-right-color: rgba(46, 43, 69, 0.16);
+              }
+
+              &:not(:first-of-type) {
+                margin-left: -1px;
+              }
+
+              &.switch-active {
+                background-color: #2e2b45;
+                z-index: 2;
+                border-color: darken(#2e2b45, 10%);
+
+                i svg path {
+                  fill: #f8d178;
+                }
+              }
+
+              i {
+                width: 24px;
+                height: 24px;
+                display: inline-flex;
+
+                svg {
+                  width: inherit;
+                  height: inherit;
+
+                  path {
+                    fill: #2e2b45;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+
+      &-catalog {
+        .grid-item,
+        .list-item {
+          margin-top: 12px;
+          margin-bottom: 12px;
+        }
+        // .list-item {
+        //   margin-left: auto;
+        //   margin-right: auto;
+        // }
+      }
+
+      &-pagination {
+        margin-top: -12px;
+        padding-top: 36px;
+        padding-bottom: 36px;
       }
     }
 
-    .pagination {
-      margin-top: -12px;
-      padding-top: 36px;
+    .filter {
+      padding-right: 24px;
+      position: sticky;
+      top: 74px;
+      // max-height: calc(100vh - 74px);
+      align-self: start;
       padding-bottom: 36px;
+
+      &-container {
+        // position: sticky;
+        // top: 62px;
+        // align-self: start;
+      }
+
+      &-topbar {
+        // border-bottom: 1px solid rgba(46, 43, 69, 0.1);
+        // position: sticky;
+        // top: 72px;
+        padding-top: 12px;
+        background-color: #fff;
+        z-index: 2;
+
+        // > .row {
+        // margin-left: 0;
+        // border-bottom: 1px solid rgba(46, 43, 69, 0.1);
+        // }
+
+        .topbar-wrap {
+          // padding-left: 0;
+          padding: 12px;
+          border: solid 1px rgba(46, 43, 69, 0.1);
+          border-radius: 8px 8px 0 0;
+
+          h2 {
+            display: flex;
+            align-items: center;
+            font-style: normal;
+            font-weight: 600;
+            font-size: 17px;
+            line-height: 22px;
+            letter-spacing: -0.408px;
+            color: #2e2b45;
+            margin: 0;
+
+            i {
+              @include m.inline-svg-icon(20px, var(--brand-primary));
+              margin-right: 8px;
+            }
+          }
+
+          button {
+            height: 38px;
+            background: none;
+            border: 0;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 15px;
+            line-height: 20px;
+            letter-spacing: -0.24px;
+            color: #2e2b45;
+          }
+        }
+      }
+
+      &-sections {
+        // min-height: calc(100vh - 74px - 76px);
+        border: 1px solid rgba(46, 43, 69, 0.1);
+        border-top: 0;
+        border-radius: 0 0 8px 8px;
+
+        .section {
+          padding: 12px;
+
+          > * {
+            margin-left: -12px;
+            margin-right: -12px;
+            padding-left: 12px;
+            padding-right: 12px;
+          }
+
+          &:not(:last-child) {
+            border-bottom: 1px solid rgba(46, 43, 69, 0.1);
+          }
+
+          &[data-expanded="false"] {
+            .section-header {
+              .title {
+                color: rgba(46, 43, 69, 0.3);
+              }
+              button svg path {
+                fill: rgba(46, 43, 69, 0.3);
+              }
+            }
+          }
+
+          &-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            .title {
+              font-style: normal;
+              font-weight: normal;
+              font-size: 15px;
+              line-height: 20px;
+              letter-spacing: -0.24px;
+              color: #2e2b45;
+            }
+
+            button {
+              @include m.button-reset();
+              @include m.inline-svg-icon(24px, var(--brand-primary));
+            }
+          }
+
+          &-content {
+            padding-top: 12px;
+
+            > div {
+              &:not(:first-child) {
+                padding-top: 3px;
+              }
+              &:not(:last-child) {
+                padding-bottom: 3px;
+              }
+              &.indent-1 {
+                padding-left: 28px;
+              }
+            }
+
+            input[type="checkbox"] {
+              display: none;
+
+              &:checked + label {
+                .slo-checkbox {
+                  border-color: var(--brand-green);
+                  background-color: var(--brand-green);
+
+                  i {
+                    display: inline-flex;
+                  }
+                }
+
+                .filter-label {
+                  color: var(--brand-primary);
+                }
+
+                .rating {
+                  opacity: 1;
+                }
+              }
+            }
+            label {
+              display: inline-flex;
+              flex-direction: row;
+              align-items: center;
+              position: relative;
+              cursor: pointer;
+
+              &:hover {
+                .filter-label {
+                  color: var(--brand-primary);
+                }
+                .rating {
+                  opacity: 1;
+                }
+              }
+
+              .slo-checkbox {
+                display: inline-flex;
+                width: 20px;
+                height: 20px;
+                border: 1px solid #c0bfc7;
+                border-radius: 4px;
+                margin-right: 8px;
+
+                i {
+                  @include m.inline-svg-icon(16px, var(--brand-white));
+                  position: absolute;
+                  top: 2px;
+                  left: 2px;
+                  display: none;
+                }
+              }
+
+              .filter-label {
+                font-style: normal;
+                font-weight: normal;
+                font-size: 14px;
+                line-height: 18px;
+                letter-spacing: -0.078px;
+                color: rgba(46, 43, 69, 0.8);
+              }
+
+              .rating {
+                opacity: 0.8;
+                i {
+                  @include m.inline-svg-icon(16px, var(--brand-orange));
+                }
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
