--- a/src/views/Explore/layout.html
+++ b/src/views/Explore/layout.html
@@ -13,12 +13,15 @@
                 <strong>76</strong> in total
               </div>
               <div class="view-switch switch-group">
-                <a class="switch-button switch-active" href=""
+                <a
+                  class="switch-button switch-active"
+                  href="#"
+                  data-toggle="grid"
                   ><i
                     ><%= require('../../images/icons/grid.svg?inline') %></i
                   ></a
                 >
-                <a class="switch-button" href=""
+                <a class="switch-button" href="#" data-toggle="list"
                   ><i
                     ><%= require('../../images/icons/list.svg?inline') %></i
                   ></a
@@ -28,8 +31,10 @@
           </div>
         </div>
 
-        <!-- <div class="content-catalog"><%= require('./grid.html')() %></div> -->
-        <div class="content-catalog"><%= require('./list.html')() %></div>
+        <div class="content-catalog">
+          <%= require('./grid.html')() %>
+          <!-- <%= require('./list.html')() %> -->
+        </div>
 
         <div class="content-pagination">
           <%= require('../partials/pagination.html')() %>
