--- a/src/views/Explore/layout.html
+++ b/src/views/Explore/layout.html
@@ -31,10 +31,7 @@
           </div>
         </div>
 
-        <div class="content-catalog">
-          <%= require('./grid.html')() %>
-          <!-- <%= require('./list.html')() %> -->
-        </div>
+        <div class="content-catalog"><%= require('./grid.html')() %></div>
 
         <div class="content-pagination">
           <%= require('../partials/pagination.html')() %>
