--- a/src/scss/widgets/carousel.scss
+++ b/src/scss/widgets/carousel.scss
@@ -1,3 +1,7 @@
+@use "/node_modules/swiper/swiper.scss";
+@use "/node_modules/swiper/components/a11y/a11y.scss";
+@use "/node_modules/swiper/components/navigation/navigation.scss";
+
 .carousel {
   &[data-carousel-type="steps"] {
   }
