--- a/src/views/partials/cards/product.html
+++ b/src/views/partials/cards/product.html
@@ -10,6 +10,9 @@
     <div class="row header">
       <div class="col title">
         <h3><%= title %></h3>
+        <% if(displayType == 'row') { %>
+        <p class="description"><%= description ?? '' %></p>
+        <% } %>
       </div>
       <div class="col wish d-flex align-items-start">
         <button title="Add to wishlist" aria-label="Add to wishlist">
@@ -19,17 +22,22 @@
       </div>
     </div>
 
-    <%= require('../author.html')({photo: author.photo, name: author.name,
-    company: author.company}) %>
+    <div class="row footer">
+      <div class="<%= displayType == 'col' ? 'col-12' : 'col' %>">
+        <%= require('../author.html')({photo: author.photo, name: author.name,
+        company: author.company}) %>
+      </div>
 
-    <div class="footer d-flex justify-content-between align-items-center">
-      <%= require('../rating.html')({value: rating}) %>
-      <div class="price">
-        <% if(price > 0) { %>
-        <span>$</span><span><%= price %></span>
-        <% } else if (price <= 0) { %>
-        <span>Free</span>
-        <% } %>
+      <div class="<%= displayType == 'col' ? 'col-12' : 'col' %>">
+        <%= require('../rating.html')({value: rating}) %>
+
+        <div class="price">
+          <% if(price > 0) { %>
+          <span>$</span><span><%= price %></span>
+          <% } else if (price <= 0) { %>
+          <span>Free</span>
+          <% } %>
+        </div>
       </div>
     </div>
   </div>
