--- a/src/scss/pages/explore.scss
+++ b/src/scss/pages/explore.scss
@@ -35,6 +35,24 @@
         z-index: 1;
       }
 
+      &-preloader {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        padding-right: 12px;
+        z-index: 2;
+
+        .topbar {
+          width: 100%;
+          padding-top: 35px;
+          padding-bottom: 34px;
+        }
+
+        .catalog {
+          width: 100%;
+        }
+      }
+
       &-topbar {
         // margin-bottom: 12px;
 
