--- a/src/views/partials/cards/product.html
+++ b/src/views/partials/cards/product.html
@@ -11,7 +11,7 @@
       <div class="col title">
         <h3><%= title %></h3>
         <% if(displayType == 'row') { %>
-        <p class="description"><%= description ?? '' %></p>
+        <p class="description"><%= description %></p>
         <% } %>
       </div>
       <div class="col wish d-flex align-items-start">
