⚡️ Add product type tag at cards in Explore page

--- a/src/scss/elements/card.scss
+++ b/src/scss/elements/card.scss
@@ -12,6 +12,12 @@
           overflow: hidden;
         }
 
+        &-tag {
+          top: initial;
+          left: 6px;
+          bottom: 6px;
+        }
+
         &-summary {
           padding: 16px 12px;
 
@@ -133,6 +139,12 @@
           border-radius: 24px 0 0 24px;
           overflow: hidden;
           flex-shrink: 0;
+        }
+
+        &-tag {
+          left: initial;
+          right: 6px;
+          top: 6px;
         }
 
         &-summary {
@@ -259,6 +271,43 @@
               }
             }
           }
+        }
+      }
+    }
+
+    .product {
+      &-cover {
+        img {
+          z-index: 1;
+        }
+      }
+
+      &-tag {
+        z-index: 2;
+        position: absolute;
+        width: 62px;
+        height: auto;
+        padding: 4px 0;
+        border-radius: 4px;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 13px;
+        line-height: 18px;
+        text-align: center;
+        letter-spacing: -0.078px;
+        color: var(--brand-white);
+
+        &[data-product-type="course"] {
+          background-color: var(--brand-violet);
+        }
+        &[data-product-type="podcast"] {
+          background-color: var(--brand-orange);
+        }
+        &[data-product-type="video"] {
+          background-color: var(--brand-green);
+        }
+        &[data-product-type="webinar"] {
+          background-color: var(--brand-blue);
         }
       }
     }
