--- a/src/views/Explore/list.html
+++ b/src/views/Explore/list.html
@@ -8,7 +8,7 @@
     pariatur\ nulla\ proident\ aliquip\ in\ laboris\ reprehenderit\ magna\
     nulla\ amet\ aute.\ Dolor\ labore\ pariatur\ non\ laborum\ qui\ tempor\
     dolore\ qui\ excepteur\ fugiat\ aliqua\ exercitation\ minim.\ Deserunt\
-    co...' }) %>
+    co...', productType: 'Course' }) %>
   </div>
   <div class="col-12 list-item">
     <%= require('../partials/cards/product.html')({ title: "Nulla\ Anim\ Sunt\
@@ -18,7 +18,7 @@
     displayType: 'row', description: 'Magna\ pariatur\ nulla\ proident\ aliquip\
     in\ laboris\ reprehenderit\ magna\ nulla\ amet\ aute.\ Dolor\ labore\
     pariatur\ non\ laborum\ qui\ tempor\ dolore\ qui\ excepteur\ fugiat\ aliqua\
-    exercitation\ minim.\ Deserunt\ co...' }) %>
+    exercitation\ minim.\ Deserunt\ co...', productType: 'Course' }) %>
   </div>
   <div class="col-12 list-item">
     <%= require('../partials/cards/product.html')({ title: "Ea\ Veniam\
@@ -28,7 +28,8 @@
     price: 99, displayType: 'row', description: 'Magna\ pariatur\ nulla\
     proident\ aliquip\ in\ laboris\ reprehenderit\ magna\ nulla\ amet\ aute.\
     Dolor\ labore\ pariatur\ non\ laborum\ qui\ tempor\ dolore\ qui\ excepteur\
-    fugiat\ aliqua\ exercitation\ minim.\ Deserunt\ co...' }) %>
+    fugiat\ aliqua\ exercitation\ minim.\ Deserunt\ co...', productType:
+    'Podcast' }) %>
   </div>
   <div class="col-12 list-item">
     <%= require('../partials/cards/product.html')({ title: "Lorem\ Labore\
@@ -38,7 +39,7 @@
     pariatur\ nulla\ proident\ aliquip\ in\ laboris\ reprehenderit\ magna\
     nulla\ amet\ aute.\ Dolor\ labore\ pariatur\ non\ laborum\ qui\ tempor\
     dolore\ qui\ excepteur\ fugiat\ aliqua\ exercitation\ minim.\ Deserunt\
-    co...' }) %>
+    co...', productType: 'Podcast' }) %>
   </div>
   <div class="col-12 list-item">
     <%= require('../partials/cards/product.html')({ title: "Culpa\ Qui\ Veniam\
@@ -48,7 +49,7 @@
     'row', description: 'Magna\ pariatur\ nulla\ proident\ aliquip\ in\ laboris\
     reprehenderit\ magna\ nulla\ amet\ aute.\ Dolor\ labore\ pariatur\ non\
     laborum\ qui\ tempor\ dolore\ qui\ excepteur\ fugiat\ aliqua\ exercitation\
-    minim.\ Deserunt\ co...' }) %>
+    minim.\ Deserunt\ co...', productType: 'Video' }) %>
   </div>
   <div class="col-12 list-item">
     <%= require('../partials/cards/product.html')({ title: "Non\ Elit\ Massa\
@@ -58,7 +59,7 @@
     pariatur\ nulla\ proident\ aliquip\ in\ laboris\ reprehenderit\ magna\
     nulla\ amet\ aute.\ Dolor\ labore\ pariatur\ non\ laborum\ qui\ tempor\
     dolore\ qui\ excepteur\ fugiat\ aliqua\ exercitation\ minim.\ Deserunt\
-    co...' }) %>
+    co...', productType: 'Webinar' }) %>
   </div>
   <div class="col-12 list-item">
     <%= require('../partials/cards/product.html')({ title: "Morbi\ Condimentum\
@@ -68,7 +69,7 @@
     pariatur\ nulla\ proident\ aliquip\ in\ laboris\ reprehenderit\ magna\
     nulla\ amet\ aute.\ Dolor\ labore\ pariatur\ non\ laborum\ qui\ tempor\
     dolore\ qui\ excepteur\ fugiat\ aliqua\ exercitation\ minim.\ Deserunt\
-    co...' }) %>
+    co...', productType: 'Webinar' }) %>
   </div>
   <div class="col-12 list-item">
     <%= require('../partials/cards/product.html')({ title: "Tortor\ Lorem\
@@ -78,7 +79,7 @@
     description: 'Magna\ pariatur\ nulla\ proident\ aliquip\ in\ laboris\
     reprehenderit\ magna\ nulla\ amet\ aute.\ Dolor\ labore\ pariatur\ non\
     laborum\ qui\ tempor\ dolore\ qui\ excepteur\ fugiat\ aliqua\ exercitation\
-    minim.\ Deserunt\ co...' }) %>
+    minim.\ Deserunt\ co...', productType: 'Webinar' }) %>
   </div>
   <div class="col-12 list-item">
     <%= require('../partials/cards/product.html')({ title: "Sapien\ Nibh\ Nisl\
@@ -88,7 +89,7 @@
     'Magna\ pariatur\ nulla\ proident\ aliquip\ in\ laboris\ reprehenderit\
     magna\ nulla\ amet\ aute.\ Dolor\ labore\ pariatur\ non\ laborum\ qui\
     tempor\ dolore\ qui\ excepteur\ fugiat\ aliqua\ exercitation\ minim.\
-    Deserunt\ co...' }) %>
+    Deserunt\ co...', productType: 'Webinar' }) %>
   </div>
   <div class="col-12 list-item">
     <%= require('../partials/cards/product.html')({ title: "Turpis\ Tincidunt\
@@ -98,7 +99,7 @@
     pariatur\ nulla\ proident\ aliquip\ in\ laboris\ reprehenderit\ magna\
     nulla\ amet\ aute.\ Dolor\ labore\ pariatur\ non\ laborum\ qui\ tempor\
     dolore\ qui\ excepteur\ fugiat\ aliqua\ exercitation\ minim.\ Deserunt\
-    co...' }) %>
+    co...', productType: 'Webinar' }) %>
   </div>
   <div class="col-12 list-item">
     <%= require('../partials/cards/product.html')({ title: "Exercitation\
@@ -109,7 +110,7 @@
     pariatur\ nulla\ proident\ aliquip\ in\ laboris\ reprehenderit\ magna\
     nulla\ amet\ aute.\ Dolor\ labore\ pariatur\ non\ laborum\ qui\ tempor\
     dolore\ qui\ excepteur\ fugiat\ aliqua\ exercitation\ minim.\ Deserunt\
-    co...' }) %>
+    co...', productType: 'Video' }) %>
   </div>
   <div class="col-12 list-item">
     <%= require('../partials/cards/product.html')({ title: "Nulla\ Anim\ Sunt\
@@ -119,6 +120,6 @@
     displayType: 'row', description: 'Magna\ pariatur\ nulla\ proident\ aliquip\
     in\ laboris\ reprehenderit\ magna\ nulla\ amet\ aute.\ Dolor\ labore\
     pariatur\ non\ laborum\ qui\ tempor\ dolore\ qui\ excepteur\ fugiat\ aliqua\
-    exercitation\ minim.\ Deserunt\ co...' }) %>
+    exercitation\ minim.\ Deserunt\ co...', productType: 'Video' }) %>
   </div>
 </div>
