--- a/src/views/Explore/filter.html
+++ b/src/views/Explore/filter.html
@@ -19,7 +19,7 @@
             <%= require('../../images/icons/collapse.svg?inline') %>
           </button>
         </div>
-        <div class="section-content">
+        <div class="section-content accordion-item-content">
           <div>
             <input
               type="checkbox"
@@ -113,14 +113,14 @@
         </div>
       </div>
 
-      <div class="section accordion-item" data-expanded="true">
+      <div class="section accordion-item" data-expanded="false">
         <div class="section-header">
           <div class="title">Price</div>
           <button class="accordion-toggler">
             <%= require('../../images/icons/collapse.svg?inline') %>
           </button>
         </div>
-        <div class="section-content">
+        <div class="section-content accordion-item-content">
           <div>
             <input type="checkbox" id="price-free" name="price" value="free" />
             <label for="price-free">
@@ -143,14 +143,14 @@
         </div>
       </div>
 
-      <div class="section accordion-item" data-expanded="true">
+      <div class="section accordion-item" data-expanded="false">
         <div class="section-header">
           <div class="title">Level</div>
           <button class="accordion-toggler">
             <%= require('../../images/icons/collapse.svg?inline') %>
           </button>
         </div>
-        <div class="section-content">
+        <div class="section-content accordion-item-content">
           <div>
             <input
               type="checkbox"
@@ -198,14 +198,14 @@
         </div>
       </div>
 
-      <div class="section accordion-item" data-expanded="true">
+      <div class="section accordion-item" data-expanded="false">
         <div class="section-header">
           <div class="title">Language</div>
           <button class="accordion-toggler">
             <%= require('../../images/icons/collapse.svg?inline') %>
           </button>
         </div>
-        <div class="section-content">
+        <div class="section-content accordion-item-content">
           <div>
             <input
               type="checkbox"
@@ -223,14 +223,14 @@
         </div>
       </div>
 
-      <div class="section accordion-item" data-expanded="true">
+      <div class="section accordion-item" data-expanded="false">
         <div class="section-header">
           <div class="title">Ratings</div>
           <button class="accordion-toggler">
             <%= require('../../images/icons/collapse.svg?inline') %>
           </button>
         </div>
-        <div class="section-content">
+        <div class="section-content accordion-item-content">
           <div>
             <input type="checkbox" id="rating-5" name="rating" value="5" />
             <label for="rating-5">
