⚡️ Regular stylesheets and theme improvement

--- a/src/scss/animations.scss
+++ b/src/scss/animations.scss
@@ -1,8 +1,10 @@
 @keyframes preloader-glare {
   from {
-    left: -100%;
+    left: 0;
+    transform: translateX(-100%);
   }
   to {
-    left: 150%;
+    left: 100%;
+    transform: translateX(100%);
   }
 }
