--- a/src/views/partials/preloaders/productCol.html
+++ b/src/views/partials/preloaders/productCol.html
@@ -1,24 +1,26 @@
-<div class="card preloader-product">
-  <div class="block-cover ratio ratio-1x1">
-    <div class="preloader-block"></div>
-  </div>
-  <div class="block-info">
-    <div class="block-header">
-      <div class="preloader-block large"></div>
-      <div class="preloader-block large"></div>
+<div class="card" data-card-type="preloader">
+  <div class="preloader-product">
+    <div class="block-cover ratio ratio-1x1">
+      <div class="preloader-block"></div>
     </div>
+    <div class="block-info">
+      <div class="block-header">
+        <div class="preloader-block large"></div>
+        <div class="preloader-block large"></div>
+      </div>
 
-    <div class="block-author">
-      <div class="preloader-block round"></div>
-      <div class="block-author-profile">
+      <div class="block-author">
+        <div class="preloader-block round"></div>
+        <div class="block-author-profile">
+          <div class="preloader-block"></div>
+          <div class="preloader-block"></div>
+        </div>
+      </div>
+
+      <div class="block-footer">
         <div class="preloader-block"></div>
         <div class="preloader-block"></div>
       </div>
-    </div>
-
-    <div class="block-footer">
-      <div class="preloader-block"></div>
-      <div class="preloader-block"></div>
     </div>
   </div>
 </div>
