🚧 Dropdown menu template on navbar

--- a/src/views/partials/navbar.html
+++ b/src/views/partials/navbar.html
@@ -1,79 +1,94 @@
 <header class="container-fluid main-header">
-  <div class="secondarybar-wrap d-flex justify-content-between">
-    <div class="nav-left">
-      <a class="d-flex flex-row align-items-center" href="">
-        <small>Channels</small>
-        <i><%= require('/src/images/icons/expand.svg?inline') %></i>
-      </a>
-    </div>
+  <div class="d-flex flex-column-reverse">
+    <nav class="mainbar-wrap d-flex" aria-label="Primary navigation">
+      <div class="brand">
+        <a href="/">
+          <img
+            src="<%= require('/src/images/logo.png') %>"
+            alt="Logo"
+            height="50"
+          />
+        </a>
+      </div>
+      <div class="module d-flex flex-row align-items-center">
+        <div class="module-dropdown">
+          <a class="d-flex flex-row align-items-center" href="/explore"
+            ><i><%= require('/src/images/icons/block.svg?inline') %></i
+            >Explore</a
+          >
+          <%= require('./menu/deepMenu.html')([ { text: 'Business\ Development',
+          sub: [{ text: 'All\ Business\ Development' }, { text: 'Programming',
+          sub: [{ text: 'Python' }, { text: 'JavaScript' }, { text: 'PHP\ &amp;\
+          CodeIgniter' }] }, { text: 'Sales' }, { text: 'Sponsorship' }, { text:
+          'Sales' }, { text: 'Sint\ Nulla\ Quis' }] }, { text: 'Eu\ minim\
+          ipsum' }, { text: 'Id\ enim' }, { text: 'Elit\ adipisicing\
+          excepteur', sub: [{text: 'Non\ Laborum'}, {text: 'Tempor\ Elit'}] } ])
+          %>
+        </div>
+      </div>
+      <div class="module d-flex flex-row align-items-center">
+        <div class="module-search">
+          <a href=""
+            ><i><%= require('/src/images/icons/search.svg?inline') %></i></a
+          >
+        </div>
+        <div class="module-cart">
+          <a href=""
+            ><i><%= require('/src/images/icons/cart.svg?inline') %></i></a
+          >
+        </div>
+        <div class="module-v-separator"></div>
+        <div class="module-user d-flex flex-row align-items-center">
+          <i><%= require('/src/images/icons/sign-in.svg?inline') %></i>
+          <a href="">Sign In</a>&nbsp; <span>or</span>&nbsp;
+          <a href="">Register</a>
+        </div>
+      </div>
+    </nav>
 
-    <ul class="nav-right d-flex flex-row">
-      <li>
-        <a href="">
-          <small>COVID-19</small>
+    <div class="secondarybar-wrap d-flex justify-content-between">
+      <div class="nav-left module-dropdown">
+        <a class="d-flex flex-row align-items-center" href="#">
+          <small>Channels</small>
+          <i><%= require('/src/images/icons/expand.svg?inline') %></i>
         </a>
-      </li>
-      <li>
-        <a href="">
-          <small>Game Day Operations</small>
-        </a>
-      </li>
-      <li>
-        <a href="">
-          <small>Return to Play</small>
-        </a>
-      </li>
-      <li>
-        <a href="">
-          <small>Fan Experience</small>
-        </a>
-      </li>
-      <li>
-        <a
-          class="button button-small button-primary d-flex flex-row align-items-center"
-          href=""
-        >
-          <i><%= require('/src/images/icons/trend-up.svg?inline') %></i>
-          <small> Trending Topics on SLO </small>
-        </a>
-      </li>
-    </ul>
+        <%= require('./menu/flatMenu.html')([{text: 'Penn\ State\ Athletics'},
+        {text: 'EngageMint\ Partners'}, {text: 'Sports\ Complex\ Academy'},
+        {text: 'University\ of\ North\ Carolina'}, {text: 'University\ of\
+        Georgia'}, {text: 'Texas\ A&amp;M\ University'}]) %>
+      </div>
+
+      <ul class="nav-right d-flex flex-row">
+        <li>
+          <a href="">
+            <small>COVID-19</small>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <small>Game Day Operations</small>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <small>Return to Play</small>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <small>Fan Experience</small>
+          </a>
+        </li>
+        <li>
+          <a
+            class="button button-small button-primary d-flex flex-row align-items-center"
+            href=""
+          >
+            <i><%= require('/src/images/icons/trend-up.svg?inline') %></i>
+            <small> Trending Topics on SLO </small>
+          </a>
+        </li>
+      </ul>
+    </div>
   </div>
-
-  <nav class="mainbar-wrap d-flex" aria-label="Primary navigation">
-    <div class="brand">
-      <a href="/">
-        <img
-          src="<%= require('/src/images/logo.png') %>"
-          alt="Logo"
-          height="50"
-        />
-      </a>
-    </div>
-    <div class="module d-flex flex-row align-items-center">
-      <div class="module-dropdown">
-        <a class="d-flex flex-row align-items-center" href="/explore"
-          ><i><%= require('/src/images/icons/block.svg?inline') %></i>Explore</a
-        >
-      </div>
-    </div>
-    <div class="module d-flex flex-row align-items-center">
-      <div class="module-search">
-        <a href=""
-          ><i><%= require('/src/images/icons/search.svg?inline') %></i></a
-        >
-      </div>
-      <div class="module-cart">
-        <a href=""
-          ><i><%= require('/src/images/icons/cart.svg?inline') %></i></a
-        >
-      </div>
-      <div class="module-v-separator"></div>
-      <div class="module-user d-flex flex-row align-items-center">
-        <i><%= require('/src/images/icons/sign-in.svg?inline') %></i>
-        <a href="">Sign In</a>&nbsp; <span>or</span>&nbsp;
-        <a href="">Register</a>
-      </div>
-    </div>
-  </nav>
 </header>
