--- a/src/scss/widgets/navbar.scss
+++ b/src/scss/widgets/navbar.scss
@@ -1,9 +1,44 @@
 @use '../elements/button' as b;
+@use '../mixins' as m;
 
 .main-header {
   position: sticky;
   top: -48px;
   z-index: 3;
+
+  .module-dropdown {
+    position: relative;
+
+    &:hover {
+      .menu {
+        display: block;
+      }
+    }
+
+    .menu {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      display: none;
+
+      .menu-wrap {
+        padding: 20px 16px;
+        background-color: var(--brand-white);
+        border: 1px solid rgba(46, 43, 69, 0.1);
+        border-radius: 4px;
+        box-shadow: 0px 32px 48px -2px rgba(14, 31, 53, 0.2);
+        overflow: hidden;
+
+        ul {
+          @include m.ul-reset;
+
+          li {
+            white-space: nowrap;
+          }
+        }
+      }
+    }
+  }
 
   .secondarybar-wrap {
     background-color: #f1f2f3;
@@ -40,6 +75,30 @@
             > path {
               fill: #2e2b45;
             }
+          }
+        }
+      }
+
+      &.module-dropdown {
+        padding-top: 0px;
+        left: 12px;
+
+        .menu .menu-wrap ul li {
+          border-radius: 4px;
+
+          &:hover {
+            background-color: rgba(46, 43, 69, 0.05);
+
+            a {
+              color: var(--brand-primary);
+            }
+          }
+
+          a {
+            display: block;
+            margin: 0;
+            padding: 8px;
+            color: rgba(46, 43, 69, 0.8);
           }
         }
       }
@@ -116,10 +175,6 @@
         margin-left: auto;
       }
 
-      &-dropdown {
-        position: relative;
-      }
-
       &-user {
         padding: 0 12px;
 
@@ -147,6 +202,91 @@
 
           > path {
             fill: #2e2b45;
+          }
+        }
+      }
+
+      &-dropdown {
+        .menu {
+          padding-top: 12px;
+          left: -20px;
+
+          .menu-wrap {
+            padding: 0;
+            padding-left: 8px;
+            display: flex;
+            flex-direction: row;
+
+            ul {
+              padding: 20px 0;
+              position: relative;
+
+              // &:not(:last-child) {
+              //   border-right: 1px solid rgba(#2e2b45, 0.1);
+              // }
+
+              li {
+                padding: 0 12px;
+                display: flex;
+
+                &:not(:last-child) {
+                  margin-bottom: 20px;
+                }
+
+                &:hover {
+                  > ul {
+                    display: block;
+                  }
+                }
+
+                &.active {
+                  > a {
+                    color: var(--brand-orange);
+
+                    i svg path {
+                      fill: var(--brand-orange);
+                    }
+                  }
+                }
+
+                a {
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: space-between;
+                  align-items: center;
+                  align-self: start;
+                  flex-grow: 1;
+                  color: var(--brand-primary);
+
+                  span {
+                    font-style: normal;
+                    font-weight: normal;
+                    font-size: 16px;
+                    line-height: 21px;
+                    letter-spacing: -0.32px;
+                    margin-right: 24px;
+                  }
+                  i {
+                    @include m.inline-svg-icon(16px, var(--brand-primary));
+                    margin: 0;
+                    margin-left: auto;
+                  }
+                }
+                > ul {
+                  display: none;
+                  position: absolute;
+                  left: 100%;
+                  top: 0;
+                  min-height: 100%;
+                  background-color: #fff;
+                  // margin-top: -1px;
+                  // margin-left: -3px;
+                  // padding: 20px;
+                  border-left: 1px solid rgba(#2e2b45, 0.1);
+                  // border-radius: 0 4px 4px 0;
+                }
+              }
+            }
           }
         }
       }
